# menu-backend

./: app.py  models.py  pyproject.toml  requirements.txt  seed.py
admin_auth/: admin_auth.py
category/: category_routes.py
hooks/: useActivityAuth.js
menu/: menu_routes.py
migrations/versions/: 03098b0b6326_add_admin_table.py  2824f3c96074_initial_migration.py  52320ff0eb22_add_icon_column_to_categories_table.py  9925b4bde808_add_benefits_procedure_duration_price_.py  e2ec0c0b7770_create_category_and_service_table.py  e5f74a737d71_increase_password_column_length_to_255.py
models/: __init__.py  category.py  service.py  user.py
routes/: __init__.py
routes/admin/: auth.py  category.py  service.py  user.py
service/: service_routes.py
