[project]
name = "pnv-backend"
version = "0.1.0"
description = "Flask backend for PnV menu API"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-JWT-Extended==4.7.1",
    "Flask-CORS==6.0.1",
    "Flask-Mail==0.10.0",
    "PyMySQL==1.1.2",
    "mysql-connector-python==9.5.0",
    "SQLAlchemy==2.0.43",
    "alembic==1.16.5",
    "gunicorn==23.0.0",
    "PyJWT==2.10.1",
    "redis==6.4.0",
    "requests==2.32.4",
    "typing_extensions==4.15.0",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "click==8.3.0",
    "Jinja2==3.1.6",
    "blinker==1.9.0",
    "itsdangerous==2.2.0",
    "greenlet==3.2.4",
    "psycopg[binary]==3.2.6",
]

